# phenoShared

./: .gitattributes  .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  COMPARISON.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SPEC.md  STATUS.md  USER_JOURNEYS.md  deny.toml  package.json  trufflehog.yml
.agileplus/: worklog.md
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql.yml  docs-deploy.yml  legacy-tooling-gate.yml  release.yml  scorecard.yml  secrets-scan.yml  trufflehog.yml  vitepress-pages.yml
.github/workflows/reusable/: alert-sync-issues.yml  ci.yml  codeql.yml  coverage.yml  legacy-tooling-gate.yml  release-drafter.yml  release.yml  rust-quality.yml  rust-release.yml  sast.yml  security-guard-hook-audit.yml  security-scan.yml  self-merge-gate.yml  tag-automation.yml  vitepress-pages.yml
contracts/errors/: error-codes.json  error-envelope.schema.json
contracts/errors/fixtures/: not-found.json  validation-error.json
crates/ffi_utils/: Cargo.toml
crates/ffi_utils/src/: lib.rs
crates/phenotype-application/: Cargo.toml
crates/phenotype-application/src/: lib.rs
crates/phenotype-cache-adapter/: Cargo.toml
crates/phenotype-cache-adapter/src/: lib.rs
crates/phenotype-config-adapter/: Cargo.toml  README.md
crates/phenotype-config-adapter/src/: error.rs
crates/phenotype-config-adapter/src/adapters/: mod.rs
crates/phenotype-config-adapter/src/adapters/outbound/: mod.rs
crates/phenotype-config-adapter/src/application/: config.rs  mod.rs
crates/phenotype-config-adapter/src/domain/: mod.rs
crates/phenotype-domain/: Cargo.toml
crates/phenotype-domain/src/: aggregates.rs  entities.rs  events.rs  lib.rs  services.rs
crates/phenotype-domain/src/aggregates/: agent_aggregate.rs  mod.rs
crates/phenotype-domain/src/entities/: agent.rs  mod.rs  task.rs
crates/phenotype-domain/src/errors/: mod.rs
crates/phenotype-domain/src/events/: mod.rs  workflow_events.rs
crates/phenotype-domain/src/value_objects/: agent_id.rs  agent_name.rs  agent_status.rs  mod.rs  priority.rs  task_id.rs  task_name.rs  task_status.rs  timestamp.rs
crates/phenotype-event-sourcing/: Cargo.toml
crates/phenotype-event-sourcing/src/: memory.rs
crates/phenotype-event-sourcing/src/application/use_cases/: mod.rs
crates/phenotype-event-sourcing/src/domain/ports/inbound/: mod.rs
crates/phenotype-http-adapter/: Cargo.toml  README.md
crates/phenotype-nanovms-client/: Cargo.toml
crates/phenotype-port-interfaces/: Cargo.toml
crates/phenotype-postgres-adapter/: Cargo.toml  README.md
crates/phenotype-redis-adapter/: Cargo.toml  README.md
crates/phenotype-state-machine/: Cargo.toml
docs/: hexagonal-ports.md  hexagonal-spec.md  package.json
docs/.vitepress/: config.mts
docs/journeys/: index.md
docs/stories/: index.md
docs/traceability/: index.md
tooling/legacy-enforcement/: agileplus_cli_integration.py
zig/: ffi_utils.zig
(+55 files in other folders)
