[package]
name = "phenotype-config-adapter"
version = "0.1.0"
edition = "2021"
description = "Configuration adapter for phenotype-port-interfaces Config port"
license = "MIT"
authors = ["Phenotype Team"]
readme = "README.md"

[dependencies]
# Core ports
phenotype-port-interfaces = { path = "../phenotype-port-interfaces" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
